--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,3 +1,20 @@
 page-welcome {
+  .welcome{
+    background-color: #FFE459;
+      h1{
+        font-size: 5em;
+        margin-top: .4em;
+      }
+      p{
+        font-size: 1.8em;
+      }
+
+  }
+  .arrow{
+    padding-left: 42%;
+    padding-top: 35%;
+    text-align: center;
+    display: inline-block;
+  }
 
 }
